<resources>
    <string name="app_name">Restaurant</string>

    <string name="first_name">Restaurant Name:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="website">Website:</string>

    <string name="first_name_hint">Enter the restaurant\'s name:</string>
    <string name="address_hint">Enter your Address:</string>
    <string name="phone_hint">Enter your Phone Number:</string>
    <string name="website_hint">Website\'s link:</string>

    <string name="submit_button_text">Submit</string>
    <string name="clear_button_text">Clear</string>

    <string name="success_message">Operation Successful</string>

    <string name="radio_label">Type</string>
    <string name="radio_option_take">Take Away</string>
    <string name="radio_option_delivery">Delivery</string>
    <string name="radio_option_table">Table</string>

    <string name="actionbar_show">Show</string>
    <string name="action_button_update">Update</string>

    <string name="table_description">Table Orders</string>
    <string name="delivery_description">Delivery Orders</string>
    <string name="takeaway_description">Take Away Orders</string>

    <string name="call_button">Call</string>
    <string name="delete_button">Delete</string>
    <string name="actionbar_settings">Settings</string>

    <string name="preferred_language">Language</string>
    <string name="preferred_start_page">Start Page</string>
    <string name="english">English</string>
    <string name="french">Francais</string>
    <string name="adding_page">Adding Page</string>
    <string name="showing_page">Showing Page</string>
    <string name="add_label">Add</string>
</resources>