<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/preferred_language"

            />
        <RadioGroup
            android:id="@+id/language_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            >
            <RadioButton
                android:id="@+id/language_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/english"/>
            <RadioButton
                android:id="@+id/language_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/french"/>

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/preferred_start_page"

            />
        <RadioGroup
            android:id="@+id/page_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            >
            <RadioButton
                android:id="@+id/page_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/adding_page"
                />
            <RadioButton
                android:id="@+id/page_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/showing_page"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>

